fixed sticky header in notifications popup on mobile

--- a/src/styles/_notifications.scss
+++ b/src/styles/_notifications.scss
@@ -27,6 +27,7 @@
 }
 
 .popup {
+
   .notifications-popup {
     display: flex;
 
@@ -50,11 +51,13 @@
     }
 
     > .content {
+
       @include media-breakpoint-down($desktop-breakpoint) {
         min-height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: stretch;
+        overflow: visible;
       }
 
       @include media-breakpoint-up($desktop-breakpoint) {
